tests/negative/ffi_const_write_strict.urb
use strict;
s = { a = "const int32" };
p = ffi.new(s);
v = ffi.view(p, s);
v.a = 1;
